--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,7 +1,7 @@
 .profile__info {
   margin: 10px auto 0;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   width: 280px;
   position: relative;
 }
