--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -2,13 +2,15 @@
   font-style: normal;
   font-weight: 500;
   font-size: 22px;
-  margin: 16px 0 0 40px;
+  margin: 16px 0 0 0;
   padding: 0;
+  text-align: center;
 }
 
 @media (min-width: 1024px) {
   .profile__title {
     font-size: 42px;
     margin: 0;
+    text-align: left;
   }
 }
